# python-ms-template

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
util/: config.py  constants.py  logger_util.py
